[IMP] sale_order_line_sequence: dont take notes into cosideration when sequencing

--- a/sale_order_line_sequence/views/sale_view.xml
+++ b/sale_order_line_sequence/views/sale_view.xml
@@ -9,9 +9,8 @@
                 <field name="max_line_sequence" invisible="1" />
             </field>
             <field name="order_line" position="attributes">
-                <attribute
-                    name="context"
-                >{'default_sequence': max_line_sequence}</attribute>
+                <attribute name="context">{'default_sequence2': max_line_sequence,
+                  'default_sequence': max_line_sequence,}</attribute>
             </field>
             <xpath
                 expr="//field[@name='order_line']/tree/field[@name='product_id']"
